improved time checking code, extended test